
    o   added LRT tests to mixed() which should replicate
        the recommended test by Barr et al. (2013, JML).
        
    o   multicore estimation of (g)lmer models now available
        through package parallel (argument cl) for mixed().
        
    o   added experimental "lme4" return method for 
        aov.car and ez.glm (which fits the data using lmer).
    
    Bugfixes
    
    o   Type 2 tests of mixed() were implemented incorretly (i.e.,
        they did not what they should have given according
        to the description given in the help file).
        
    o   aov.car() and ez.glm() now convert factor levels of within 
        subjects factors to be of length one so that long levels 
        do not lead to problems when constructing the call to lm. 
        Thanks to Isaac Schwabacher for noticing this, see also:
        https://bugs.r-project.org/bugzilla3/show_bug.cgi?id=15377
    
    o   mixed should now work with missing values as it construes
        a new data object if the model.matrix from which the
        different versions are fitted has nrow different to 
        nrow(data) (with warning). Thanks to Daniel Bunker
        for reporting this.
        
    o   mixed should work with the neweset version of lme4 (> 1.0)
        and the newst version of pbkrtest (>= 0.3-5.1), but also 
        with older versions.

                    ************************
                    ** afex VERSION 0.5-x **
                    ************************
                    
                    Changes in afex Version 0.5-x
                    Released May 2013

    Significant User Visible Changes and New Features

    o   added argument factorize (default: TRUE) to aov.car and ez.glm:
        all variables are now factorized per default. (now it is 
        necessary to set factorize=FALSE for ANCOVAs!)
    
    o   added argument per.parameter to mixed() which allows to specify