@@ -4,6 +4,18 @@ export(ez.glm)
 export(mixed)
 export(nice.anova)
 export(univ)
+import(car)
+import(pbkrtest)
+importFrom(coin,median_test)
+importFrom(coin,oneway_test)
+importFrom(coin,wilcox_test)
+importFrom(lme4,glmer)
+importFrom(lme4,lmer)
+importFrom(lme4,nobars)
+importFrom(reshape2,dcast)
+importFrom(stringr,str_c)
+importFrom(stringr,str_detect)
+importFrom(stringr,str_replace_all)
 S3method(anova,mixed)
 S3method(print,mixed)
 S3method(summary,mixed)
